2004-02-13  Atsushi Enomoto <atsushi@ximian.com>

	* DTDObjectModel.cs, DTDReader.cs, DTDValidatingReader.cs : 
	  say goodbye to sys.collections.specialized.
	  (replaced the classes in that namespace with ArrayList or Hashtable)

2004-02-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : For performance reason, XmlTextReader now uses
	  base ReadInnerXml() and don't store currentTag array unnecessarily.
	* XmlTextReader.cs :
	  - Fixed GetAttribute(int) that might cause index out of range.
	  - Now it consumes the text reader by reading blocks, as MS.NET does.
	    Modified GetRemainder(), PeekChar(), ReadChar() and so on.
	  - Now it doesn't create Value string for linked nodes, unless it 
	    is actually required.
	  - some code refactory.

2004-02-11  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs, XmlTextWriterOpenElement.cs :
	  Reduced creation of openlElement. It also saves much memory.

2004-02-10  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : ChildNodes should not create XmlNodeListChildren
	  every time. This fix heavily improved performance.

2004-02-10  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttributeCollection.cs : set owner element as parent on removal
	  events (though they are not "parent" in infoset or dom context)
	* XmlElement.cs : Don't remove attributes twice (raises extraneous
	  removal events).
	* XmlNamespaceManager.cs, XmlNodeChangedEventArgs :
	  Added NET_1_2 members.

2004-02-08  Atsushi Enomoto <atsushi@ximian.com>

	* DTDObjectModel.cs : Limit external entity reference from DTD by 256.
	  foreach elimination.  DTDParameterEntityDeclaration should set Root.
	  Compute attribute default value without raising an error.
	  (for non-error reporting reader)
	* DTDReader.cs : Fixes for the above fixes. foreach elimination.
	* DTDValidatingReader.cs, NameTable.cs, XmlAttribute.cs,
	  XmlAttributeCollection.cs, XmlChar.cs, XmlConstruct.cs,
	  XmlDocumentFragment.cs, XmlDocumentNavigator.cs, XmlElement.cs,