@@ -63,39 +63,7 @@ namespace System.Xml
 			}
 		}
 
-		public override Uri ResolveUri (Uri baseUri, string relativeUri)
-		{
-			if (baseUri == null) {
-				if (relativeUri == null)
-					throw new NullReferenceException ("Either baseUri or relativeUri are required.");
-				// Don't ignore such case that relativeUri is in fact absolute uri (e.g. ResolveUri (null, "http://foo.com")).
-				if (relativeUri.StartsWith ("http:") ||
-					relativeUri.StartsWith ("https:") ||
-					relativeUri.StartsWith ("file:"))
-					return new Uri (relativeUri);
-				else
-					// extraneous "/a" is required because current Uri stuff 
-					// seems ignorant of difference between "." and "./". 
-					// I'd be appleciate if it is fixed with better solution.
-					return new Uri (Path.GetFullPath (relativeUri));
-//					return new Uri (new Uri (Path.GetFullPath ("./a")), EscapeRelativeUriBody (relativeUri));
-			}
-
-			if (relativeUri == null)
-				return baseUri;
-
-			return new Uri (baseUri, EscapeRelativeUriBody (relativeUri));
-		}
-
-		private string EscapeRelativeUriBody (string src)
-		{
-			return src.Replace ("<", "%3C")
-				.Replace (">", "%3E")
-				.Replace ("#", "%23")
-				.Replace ("%", "%25")
-				.Replace ("\"", "%22");
-		}
-
+		// see also XmlResolver.EscapeRelativeUriBody().
 		private string UnescapeRelativeUriBody (string src)
 		{
 			return src.Replace ("%3C", "<")
